# simulation-archlinux

./: README.md
docker/: Dockerfile  install.sh  key_install  key_install.sh  robot_test  stop_robot
iti0201_robot/: model.config  model.sdf
pibot_controls/: PiBot.py  image_processor.py  install.sh  opencv.py  package.xml  robot_test  script_launch  update_autotest  update_files  update_robots.sh
pibot_description/: CMakeLists.txt  package.xml
pibot_description/launch/: generate_cone_urdf.launch  generate_urdf.launch
pibot_description/models/iti0201_robot/: model.config  model.sdf
pibot_description/models/iti0201_robot_cone/: model.config
pibot_description/models/iti0201_robot_static/: model.sdf
pibot_description/models/labyrinth1/: M1.dae  M1_1.dae  model.config  model.sdf
pibot_description/models/labyrinth2/: M2_1.dae  model.config  model.sdf
pibot_description/models/labyrinth3/: M2_2.dae  model.config  model.sdf
pibot_description/models/labyrinth4/: M2_3.dae  model.config  model.sdf
pibot_description/models/labyrinth5/: M2_4.dae  model.config  model.sdf
pibot_description/models/object/: model.sdf  object_world.world  robot_object.dae
pibot_description/models/racetrack/: model.config  model.sdf
pibot_description/models/racetrack10/: model.config  model.sdf
pibot_description/models/racetrack11/: model.config  model.sdf
pibot_description/models/racetrack12/: model.config  model.sdf
pibot_description/models/racetrack13/: model.config  model.sdf
pibot_description/models/racetrack14/: model.config  model.sdf
pibot_description/models/racetrack15/: model.config  model.sdf
pibot_description/models/racetrack16/: model.config  model.sdf
pibot_description/models/racetrack17/: model.config  model.sdf
pibot_gazebo/: CMakeLists.txt  grabber_plugin.cpp  ir_plugin.cpp  line_sensor_script.py  package.xml  wheel_plugin.cpp
pibot_gazebo/launch/: default.launch  params.launch  position.launch
pibot_gazebo/scripts/: imu_script.py  kill_gazebo.sh  line_sensor_script.py
pibot_gazebo/test/SIM/: cpp_simple.cpp  cpp_simple.test  simple.test  simple_test.py
pibot_gazebo/worlds/: default.world
pibot_gazebo/worlds/L1/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world  4.world  4_custom.world  5.world  5_custom.world  6.world  666.world  6_custom.world  7.world  7_custom.world
pibot_gazebo/worlds/L2/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world  4.world  4_custom.world  5.world  5_custom.world
pibot_gazebo/worlds/L3/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world  4.world  4_custom.world
pibot_gazebo/worlds/M1/: 1.world  1_custom.world
pibot_gazebo/worlds/M2/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world  4.world  4_custom.world
pibot_gazebo/worlds/M3/: 1_custom.world  2_custom.world
pibot_gazebo/worlds/M4/: 1.world  2.world  3.world  3_custom.world  4.world  4_custom.world
pibot_gazebo/worlds/O1/: 1.world  1_custom.world  1_small.world  1_small_custom.world  2.world  2_custom.world  2_small.world  2_small_custom.world  3.world  4.world  5.world
pibot_gazebo/worlds/O2/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world  4.world  4_custom.world
pibot_gazebo/worlds/O3/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world
pibot_gazebo/worlds/O4/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world
pibot_gazebo/worlds/S1/: 1.world  1_custom.world  1_small.world  1_small_custom.world  2.world  2_custom.world  3.world  3_custom.world  4.world  4_custom.world  5.world  5_custom.world
pibot_gazebo/worlds/S2/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world
pibot_gazebo/worlds/S3/: 2.world  2_custom.world  3.world  3_custom.world
pibot_gazebo/worlds/S4/: 1.world  1_custom.world  2.world  2_custom.world
pibot_gazebo/worlds/SIM/: 1.world  1_custom.world
pibot_gazebo/worlds/W1/: 1.world  1_custom.world  2.world  2_custom.world  3.world  3_custom.world  4.world  4_custom.world
(+69 files in other folders)
