<?xml version="1.0"?>
<package format="2">
  <name>pibot_controls</name>
  <version>0.0.0</version>
  <description>The pibot package</description>
  <maintainer email="ingmar@todo.todo">ingmar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
